--- a/web/index.html
+++ b/web/index.html
@@ -1,1 +1,12 @@
-''
+<!DOCTYPE html>
+<html>
+<head>
+  <base href="/TheHittersLedger/">
+  <meta charset="UTF-8">
+  <title>The Hitter's Ledger</title>
+  <link rel="manifest" href="manifest.json">
+</head>
+<body>
+  <script src="flutter_bootstrap.js" async></script>
+</body>
+</html>
