--- a/web/index.html
+++ b/web/index.html
@@ -2,6 +2,10 @@
 <html>
 <head>
   <base href="$FLUTTER_BASE_HREF">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Hitter Ledger">
+  <link rel="apple-touch-icon" href="apple-touch-icon.png">
   <meta charset="UTF-8">
   <title>The Hitter's Ledger</title>
   <link rel="manifest" href="manifest.json">
