--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <img src="images/hl_logo.png" alt="Logo" class="logo-img">
                 <div class="logo-text">THE HITTER'S <span>LEDGER</span></div>
             </a>
-            <a href="/app/" class="nav-link">Login</a>
+            <a href="https://the-hitters-ledger.web.app" class="nav-link">Login</a>
         </nav>
 
         <section class="hero">
@@ -297,7 +297,7 @@
       onAuthStateChanged(auth, (user) => {
         if (user) {
           console.log("Logged in user detected. Redirecting to app...");
-          window.location.href = "/app/";
+          window.location.href = "https://the-hitters-ledger.web.app";
         }
       });
     </script>
