--- a/terms.html
+++ b/terms.html
@@ -29,6 +29,6 @@
     <p>We may terminate or suspend access to our Service immediately, without prior notice or liability, for any reason whatsoever, including without limitation if you breach the Terms.</p>
 
     <h2>5. Contact Us</h2>
-    <p>If you have any questions about these Terms, please contact us at: <strong>[Your Support Email Here]</strong></p>
+    <p>If you have any questions about these Terms, please contact us at: <strong>thehittersledger@gmail.com</strong></p>
 </body>
 </html>
